--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <div class="flex-grow">
             <div
                 class="absolute top-0 bottom-0 mx-auto left-1/2 transform -translate-x-1/2 z-0 w-full md:w-[1200px] lg:w-[1600px] max-w-screen">
-                <img src="/images/meta/home-shapes-full.svg" class="hidden lg:block w-full h-full object-cover"
+                <img src="./images/meta/home-shapes-full.svg" class="hidden lg:block w-full h-full object-cover"
                     alt="Shapes" />
-                <img src="/images/meta/home-shapes-tablet.svg" class="hidden md:block w-full h-full object-cover"
+                <img src="./images/meta/home-shapes-tablet.svg" class="hidden md:block w-full h-full object-cover"
                     alt="Shapes" />
-                <img src="/images/meta/home-shapes-mobile.svg" class="md:hidden w-full h-full object-cover"
+                <img src="./images/meta/home-shapes-mobile.svg" class="md:hidden w-full h-full object-cover"
                     alt="Shapes" />
             </div>
             <section class="relative">
@@ -107,19 +107,19 @@
                     <div
                         class="my-8 lg:my-12 gap-8 flex flex-col md:flex-row flex-wrap md:gap-12 justify-center content-center justify-items-center">
                         <div class="max-w-[310px]">
-                            <img src="/images/meta/feature-1.svg" class="mx-auto mb-4 w-12 h-12" alt="Step 1" />
+                            <img src="./images/meta/feature-1.svg" class="mx-auto mb-4 w-12 h-12" alt="Step 1" />
                             <h3 class="mb-2 text-2xl font-bold">Scan the QR code</h3>
                             <p class="mb-4 text-primary-500 text-lg">When it’s time to swap info, have your new contact
                                 scan your QR code with their phone camera.</p>
                         </div>
                         <div class="max-w-[310px]">
-                            <img src="/images/meta/feature-2.svg" class="mx-auto mb-4 w-12 h-12" alt="Step 2" />
+                            <img src="./images/meta/feature-2.svg" class="mx-auto mb-4 w-12 h-12" alt="Step 2" />
                             <h3 class="mb-2 text-2xl font-bold">Send a message</h3>
                             <p class="mb-4 text-primary-500 text-lg">Your QR code is linked to a custom message you’ve
                                 created. So all they have to do is hit <i>Send</i>.</p>
                         </div>
                         <div class="max-w-[310px]">
-                            <img src="/images/meta/feature-3.svg" class="mx-auto mb-4 w-12 h-12" alt="Step 3" />
+                            <img src="./images/meta/feature-3.svg" class="mx-auto mb-4 w-12 h-12" alt="Step 3" />
                             <h3 class="mb-2 text-2xl font-bold">Follow-up from your inbox</h3>
                             <p class="mb-4 text-primary-500 text-lg">With aika's smart inbox, you can easily manage and
                                 respond to all your new connections, making follow-ups effortless.</p>
@@ -137,8 +137,8 @@
             <div class="mx-auto max-w-screen-xl text-center">
                 <div class="flex items-center justify-center">
                     <a href="#" class="inline-block group/logo">
-                        <img src="/images/logo/logo.png" class="h-10 md:h-16 group-hover/logo:hidden" alt="aika" />
-                        <img src="/images/logo/logo-color.png" class="h-10 md:h-16 hidden group-hover/logo:inline-block"
+                        <img src="./images/logo/logo.png" class="h-10 md:h-16 group-hover/logo:hidden" alt="aika" />
+                        <img src="./images/logo/logo-color.png" class="h-10 md:h-16 hidden group-hover/logo:inline-block"
                             alt="aika" />
                     </a>
                 </div>
