--- a/index.html
+++ b/index.html
@@ -133,6 +133,135 @@
             </section>
         </div>
 
+        <!-- Testimonials Section -->
+        <section class="relative bg-transparent">
+            <div class="py-8 px-6 mx-auto max-w-screen-xl text-center sm:py-16 lg:px-6 lg:py-24">
+                <div class="max-w-screen-md mb-8 lg:mb-16 mx-auto text-center">
+                    <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-primary-900">
+                        What our users say
+                    </h2>
+                    <p class="text-primary-500 font-normal text-lg md:text-xl">
+                        Join thousands of professionals who've transformed their networking with Aika
+                    </p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-screen-xl mx-auto">
+                    <!-- Testimonial 1 -->
+                    <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-8 border border-gray-200 hover:shadow-sm transition-shadow overflow-hidden">
+                        <div class="flex items-center mb-4">
+                            <div class="flex text-aika-red">
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="#eeeeee" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                        <blockquote>
+                            <p class="text-lg font-medium text-primary-900 mb-4">
+                                Aika has completely transformed how I network at conferences. No more fumbling with business cards - just scan and connect instantly!
+                            </p>
+                        </blockquote>
+                        <div class="flex items-center">
+                            <div class="rounded-full flex items-center justify-center text-white font-bold text-lg mr-4">
+                                <img class="w-12 h-12" src='./images/peoples/peo-3.svg' alt="Sarah Mitchell"    />
+                            </div>
+                            <div class="flex flex-col items-start">
+                                <div class="font-semibold text-primary-900">Sarah Mitchell</div>
+                                <div class="text-sm text-primary-500">Marketing Director, TechCorp</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 2 -->
+                    <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-8 border border-gray-200 hover:shadow-sm transition-shadow overflow-hidden">
+                        <div class="flex items-center mb-4">
+                            <div class="flex text-aika-teal">
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="#eeeeee" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="#eeeeee" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                        <blockquote>
+                            <p class="text-lg font-medium text-primary-900 mb-4 ">
+                                The smart inbox feature is a game-changer. I can easily follow up with all my new connections without losing track of anyone.
+                            </p>
+                        </blockquote>
+                        <div class="flex items-center">
+                            <div class="rounded-full flex items-center justify-center text-white font-bold text-lg mr-4">
+                                <img class="w-12 h-12" src='./images/peoples/peo-1.svg' alt="Sarah Mitchell"    />
+                            </div>
+                            <div class="flex flex-col items-start">
+                                <div class="font-semibold text-primary-900">David Johnson</div>
+                                <div class="text-sm text-primary-500">Startup Founder, InnovateLab</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 3 -->
+                    <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-8 border border-gray-200 hover:shadow-sm transition-shadow overflow-hidden">
+                        <div class="flex items-center mb-4">
+                            <div class="flex text-aika-purple">
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                                <svg class="w-5 h-5" fill="#eeeeee" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                        <blockquote>
+                            <p class="text-lg font-medium text-primary-900 mb-4 relative">
+                                The QR codes are so customizable—
+                                I can tailor each one for a specific event,
+                                audience, or campaign.
+                                It makes every interaction feel personal!
+                            </p>
+                        </blockquote>
+                        <div class="flex items-center">
+                            <div class="rounded-full flex items-center justify-center text-white font-bold text-lg mr-4">
+                                <img class="w-12 h-12" src='./images/peoples/peo-2.svg' alt="Sarah Mitchell"    />
+                            </div>
+                            <div class="flex flex-col items-start">
+                                <div class="font-semibold text-primary-900">Emma Chen</div>
+                                <div class="text-sm text-primary-500">Event Manager, ConnectPro</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- FAQ Section -->
         <section class="relative bg-transparent">
             <div class="py-8 px-6 sm:py-16 lg:px-6 lg:py-24">
@@ -250,37 +379,44 @@
             </div>
         </footer>
     </div>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" class="fixed bottom-8 right-8 bg-aika-yellow hover:bg-aika-pink text-primary-900 rounded-full p-3 shadow-lg transition-all duration-300 opacity-0 invisible transform translate-y-10 z-50">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18"></path>
+        </svg>
+    </button>
 </body>
 
  <script>
-//     window.addEventListener('load', () => {
-//         const duration = 10000; // total scroll duration in ms
-//         const delay = 1000; // 1-second delay
-//         const totalHeight = document.body.scrollHeight - window.innerHeight;
+    // window.addEventListener('load', () => {
+    //     const duration = 10000; // total scroll duration in ms
+    //     const delay = 1000; // 1-second delay
+    //     const totalHeight = document.body.scrollHeight - window.innerHeight;
 
-//         // Easing function for smooth effect
-//         function easeInOutQuad(t) {
-//             return t < 0.5 ? 2 * t * t : -1 + (4 - 2 * t) * t;
-//         }
+    //     // Easing function for smooth effect
+    //     function easeInOutQuad(t) {
+    //         return t < 0.5 ? 2 * t * t : -1 + (4 - 2 * t) * t;
+    //     }
 
-//         setTimeout(() => {
-//             const start = performance.now();
+    //     setTimeout(() => {
+    //         const start = performance.now();
 
-//             function scrollStep(timestamp) {
-//                 const elapsed = timestamp - start;
-//                 const progress = Math.min(elapsed / duration, 1); // 0 to 1
-//                 const easedProgress = easeInOutQuad(progress);
+    //         function scrollStep(timestamp) {
+    //             const elapsed = timestamp - start;
+    //             const progress = Math.min(elapsed / duration, 1); // 0 to 1
+    //             const easedProgress = easeInOutQuad(progress);
 
-//                 window.scrollTo(0, easedProgress * totalHeight);
+    //             window.scrollTo(0, easedProgress * totalHeight);
 
-//                 if (progress < 1) {
-//                     requestAnimationFrame(scrollStep);
-//                 }
-//             }
+    //             if (progress < 1) {
+    //                 requestAnimationFrame(scrollStep);
+    //             }
+    //         }
 
-//             requestAnimationFrame(scrollStep);
-//         }, delay);
-//     });
+    //         requestAnimationFrame(scrollStep);
+    //     }, delay);
+    // });
  </script>
 
 <script>
@@ -323,6 +459,30 @@
                     content.classList.add('hidden');
                     icon.classList.remove('rotate-45');
                 }
+            });
+        });
+    });
+
+    // Back to Top Button functionality
+    document.addEventListener('DOMContentLoaded', function() {
+        const backToTopButton = document.getElementById('backToTop');
+        
+        // Show button when user scrolls down 300px
+        window.addEventListener('scroll', function() {
+            if (window.pageYOffset > 300) {
+                backToTopButton.classList.remove('opacity-0', 'invisible', 'translate-y-10');
+                backToTopButton.classList.add('opacity-100', 'visible', 'translate-y-0');
+            } else {
+                backToTopButton.classList.add('opacity-0', 'invisible', 'translate-y-10');
+                backToTopButton.classList.remove('opacity-100', 'visible', 'translate-y-0');
+            }
+        });
+        
+        // Smooth scroll to top when button is clicked
+        backToTopButton.addEventListener('click', function() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
             });
         });
     });
